# bawa

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
example/: config.toml
src/: app.rs  cli.rs  commands.rs  entry.rs  event.rs  help.rs  input.rs  lib.rs  main.rs  message.rs  profile.rs  search.rs  term.rs  ui.rs  utils.rs  watcher.rs
src/cli/: commands.rs  completion.rs  handlers.rs  mod.rs
src/config/: keys.rs  mod.rs  options.rs  theme.rs
src/fuzzy_finder/: item.rs  mod.rs  picker.rs
src/game/: creation.rs  mod.rs  profile.rs  state.rs
src/input/: handlers.rs  mod.rs  mode.rs
src/profile/: mod.rs  state.rs
src/tree/: id.rs  mod.rs  node.rs  relations.rs  traverse.rs
src/tree/widget/: item.rs  mod.rs  render.rs  state.rs  tree.rs
src/ui/: confirmation.rs  draw.rs  mod.rs  popup.rs  scroller.rs
