[package]
name = "bawa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
bincode = "1.3.3"
clap = "4.5.20"
clap_complete = { version = "4.5.40", features = ["unstable-dynamic"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.31"
indexmap = "2.6.0"
notify = "7.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.15.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8.19"
toml_edit = "0.22.22"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
