[package]
name = "bawa"
version = "0.1.0"
edition = "2021"
description = "A TUI game save organizer"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
repository = "https://github.com/sarowish/bawa"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = "4.5.40"
clap_complete = { version = "4.5.54", features = ["unstable-dynamic"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
indexmap = "2.10.0"
notify = "8.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8.23"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
