[package]
name = "bawa"
version = "0.1.0"
edition = "2024"
description = "A TUI game save organizer"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
repository = "https://github.com/sarowish/bawa"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
clap = "4.5.60"
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
fastrand = "2.3.0"
futures = "0.3.32"
indexmap = "2.13.0"
notify = "8.2.0"
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.0.3"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
